fixed WeatherFetcherTest.java and TrainDataFetcher successfully calls MyApp1 as the simulator